# Nous-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  README.md  WinGen.bat  prebuild.bat  premake5.lua
Nous/: CMakeLists.txt  premake5.lua
Nous-Editor/: CMakeLists.txt  editor.ini  imgui.ini  luncher.ini  premake5.lua
Nous-Editor/SandboxProject/: AssetRegistry.nsasset  Sandbox.nsproj  WinGen.bat
Nous-Editor/SandboxProject/Anim/: fallL.nsani  idle.nsanm  idleL.nsani  idleR.nsani  jumpL.nsani  jumpR.nsani  runL.nsani  runR.nsani  t.nsani  test.nsani  test_single.nsani
Nous-Editor/SandboxProject/Assets/: AssetRegistry.nsasset
Nous-Editor/SandboxProject/Assets/Scenes/: 3DExample.nous  Example.nous  PhysicsExample.nous
Nous-Editor/SandboxProject/Assets/Script/: WinGen.bat
Nous-Editor/SandboxProject/Assets/Script/Source/: Camera.cs  Player.cs
Nous-Editor/SandboxProject/Assets/Scripts/: premake5.lua
Nous-Editor/SandboxProject/Assets/Scripts/Source/: Camera.cs  Player.cs  TheText.cs
Nous-Editor/SandboxProject/Prefabs/: B.nsprefab  Bullet.nsprefab  Empty Entity.nsprefab  Panel.nsprefab  Square.nsprefab
Nous-Editor/SandboxProject/Scenes/: 3DExample.nous  Example.nous  PhysicsExample.nous  Shoot.nous  Test.nous
Nous-Editor/SandboxProject/Scripts/Source/: Bullet.cs  Camera.cs  Kid.cs  Panel.cs  Player.cs
Nous-Editor/assets/scenes/: 3DExample.scn  Example.scn  PhysicsExample.scn
Nous-Editor/assets/shaders/: Renderer2D_Quad.glsl  Texture.glsl
Nous-Editor/resources/Nous-ScriptCore/: premake5.lua
Nous-Editor/resources/Nous-ScriptCore/Source/: Input.cs  InternalCalls.cs  KeyCode.cs  NousConsole.cs
Nous-Editor/resources/Nous-ScriptCore/Source/Nous/: Vector3.cs
Nous-Editor/resources/Nous-ScriptCore/Source/Nous/Physics/: Physics.cs
Nous-Editor/resources/Nous-ScriptCore/Source/Nous/Scene/: Component.cs  Entity.cs
Nous-Editor/src/: EditorLayer.cpp  EditorLayer.h  EditorLuncherLayer.cpp  EditorLuncherLayer.h  NousEditorApp.cpp
Nous-Editor/src/Event/: EditorEvent.cpp  EditorEvent.h  Observer.h
Nous-Editor/src/Panel/: AnimClipEditorPanel.cpp  AnimClipEditorPanel.h  AnimMachineEditorPanel.cpp  AnimMachineEditorPanel.h  Console.cpp  ConsolePanel.cpp  ConsolePanel.h  DockingSpace.cpp  DockingSpace.h  ResourceBrowserPanel.cpp  ResourceBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneManagerDialog.cpp  SceneManagerDialog.h  ThumbnailCache.cpp  ThumbnailCache.h  ViewportPanel.cpp  ViewportPanel.h
Nous-ScriptCore/: premake5.lua
Nous-ScriptCore/Source/: Game.cs  InternalCalls.cs  Main.cs  Player.cs
Nous/src/: Nous.h  pch.h
Nous/src/Nous/: Application.cpp  Application.h  CameraController.cpp  CameraController.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
Nous/src/Nous/Anim/: AnimClip.cpp  AnimClip.h  AnimClipSerializer.cpp  AnimClipSerializer.h  AnimMachine.cpp  AnimMachine.h  AnimMachineSerializer.cpp  AnimMachineSerializer.h
Nous/src/Nous/Asset/: AnimClipImporter.cpp  AnimClipImporter.h  AnimMachineImporter.cpp  AnimMachineImporter.h  Asset.cpp  Asset.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssetManagerBase.cpp  AssetManagerBase.h  AssetMetadata.h  EditorAssetManager.cpp  EditorAssetManager.h  RuntimeAssetManager.cpp  RuntimeAssetManager.h  SceneImporter.cpp  SceneImporter.h  TextureImporter.cpp  TextureImporter.h
Nous/src/Nous/Core/: Application.cpp  Application.h  Assert.h  Base.h  Buffer.h  Console.cpp  Console.h  Core.h  EntryPoint.h  FileSystem.cpp  FileSystem.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  MouseCodes.h  PlatformDetection.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Nous/src/Nous/Debug/: Instrument.h
Nous/src/Nous/Event/: AppEvent.cpp  AppEvent.h  ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  Observer.h
Nous/src/Nous/ImGui/: ImGuiBuild.cpp  ImGuiDockingSpace.cpp  ImGuiDockingSpace.h  ImGuiLayer.cpp  ImGuiLayer.h  UI.cpp  UI.h
Nous/src/Nous/Physics/: Physics2D.h
Nous/src/Nous/Platform/Windows/: WinsWindow.cpp  WinsWindow.h
Nous/src/Nous/Project/: Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
Nous/src/Nous/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  EditorCamera.cpp  EditorCamera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  MSDFData.h  OrthoCamera.cpp  OrthoCamera.h  OrthoCameraController.cpp  OrthoCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Nous/src/Nous/Scene/: Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Nous/src/Nous/Scene/System/: AnimSystem.cpp  AnimSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptSystem.cpp  ScriptSystem.h  TransformSystem.cpp  TransformSystem.h  UISystem.cpp  UISystem.h
Nous/src/Nous/Script/: ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h
Nous/src/Nous/UI/: UI.cpp  UI.h
Nous/src/Nous/Utils/: PlatformUtils.h
Nous/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Nous/src/Platform/Windows/: WinsInput.cpp  WinsInput.h  WinsPlatformUtils.cpp  WinsTime.cpp  WinsTime.h  WinsWindow.cpp  WinsWindow.h
SandBox/: CMakeLists.txt  imgui.ini  premake5.lua
SandBox/src/: DockingSpace.cpp  (+6 more)
Script/: Setup.py  SetupPython.py  SetupVulkan.py  Utils.py  Vulkan.py
template/: StartGame.bat  imgui.ini
(+21 files in other folders)
